# voice-agent-demo

./: .gitignore  pyproject.toml
backend/: .env  .env.example  test_db.py
backend/alembic/: env.py
backend/alembic/versions/: 42f42b625505_create_business_table.py  51dee62b4d52_create_conversion_conversationcontent_.py  b201d830058d_create_apointment_table.py  b8ba44e429c3_create_customers_table.py  e9cf43f4e54f_changed_phone_field_to_phone_number_in_.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/common/: exceptions.py  responses.py
backend/app/common/exceptions/: __init__.py  appointment.py  base.py  business.py  conversation.py  customer.py
backend/app/common/exceptions/utils/: datetime.py
backend/app/common/utils/: business.py
backend/app/core/: __init__.py  config.py  constants.py  exception_handlers.py  lifespan.py  logger.py  logging.py
backend/app/core/dependencies/: appointment.py  business.py  conversation.py  customer.py
backend/app/database/: mixins.py  models.py  session.py
backend/app/integrations/retell/: dependencies.py  handler.py
backend/app/middlewares/: logging.py
backend/app/modules/appointments/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/business/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/conversations/: enums.py  repository.py  service.py
backend/app/modules/customers/: model.py  models.py  repositories.py  repository.py  router.py  schema.py  schemas.py  service.py  services.py
backend/app/modules/webhooks/: router.py
(+15 files in other folders)
