[project]
name = "voice-agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "retell-sdk>=5.54.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
